[package]
name = "ruuvi-terminal-client"
version = "0.1.3"
edition = "2021"

[dependencies]
pancurses = "0.17.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.140"
